--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
