--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.2.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
@@ -16,6 +17,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@supabase/supabase-js": "^2.43.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
