feat: add prisma

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-	"editor.insertSpaces": false,
-	"prettier.semi": true,
-	"prettier.printWidth": 92,
-	"prettier.singleQuote": true,
-	"prettier.useTabs": true
+  "editor.insertSpaces": false,
+  "prettier.semi": true,
+  "prettier.printWidth": 92,
+  "prettier.singleQuote": true,
+  "prettier.useTabs": true,
+  "cSpell.words": ["supabase"]
 }
