--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
-    "@heroicons/react": "^2.1.3",
-    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@prisma/client": "^5.19.1",
     "@supabase/supabase-js": "^2.43.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -30,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
